--- a/PageControl/PageControl/Base.lproj/Main.storyboard
+++ b/PageControl/PageControl/Base.lproj/Main.storyboard
@@ -16,21 +16,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="HGe-nW-tyL">
-                                <rect key="frame" x="0.0" y="543" width="377" height="28"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lUh-lp-2ID">
+                                <rect key="frame" x="16" y="64" width="382" height="748"/>
+                            </imageView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="HGe-nW-tyL">
+                                <rect key="frame" x="16" y="824.5" width="382" height="27.5"/>
                                 <color key="backgroundColor" systemColor="linkColor"/>
                                 <connections>
                                     <action selector="pageChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="yoM-lc-M42"/>
                                 </connections>
                             </pageControl>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lUh-lp-2ID">
-                                <rect key="frame" x="0.0" y="44" width="377" height="500"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="lUh-lp-2ID" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="5NF-TC-UuH"/>
+                            <constraint firstItem="HGe-nW-tyL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="9W3-C3-31N"/>
+                            <constraint firstItem="lUh-lp-2ID" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="EcL-OJ-lhS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="HGe-nW-tyL" secondAttribute="bottom" constant="10" id="Q6Y-RM-i0F"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lUh-lp-2ID" secondAttribute="trailing" constant="16" id="gS9-Um-Ui8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HGe-nW-tyL" secondAttribute="trailing" constant="16" id="r7E-iJ-e3q"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="lUh-lp-2ID" secondAttribute="bottom" constant="50" id="tzu-jg-L2h"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="imgView" destination="lUh-lp-2ID" id="4UX-12-Q0X"/>
