--- a/Sketch/Sketch/Base.lproj/Main.storyboard
+++ b/Sketch/Sketch/Base.lproj/Main.storyboard
@@ -20,49 +20,48 @@
                                 <rect key="frame" x="16" y="20" width="382" height="822"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="vJo-T9-gD1">
-                                        <rect key="frame" x="0.0" y="0.0" width="382" height="90"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="34"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8PT-4J-mKe">
-                                                <rect key="frame" x="0.0" y="0.0" width="63.5" height="90"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="63.5" height="34"/>
                                                 <state key="normal" title="검은색"/>
                                                 <connections>
                                                     <action selector="btnBlack:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WRO-Vj-J9z"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vHS-tk-btF">
-                                                <rect key="frame" x="63.5" y="0.0" width="64" height="90"/>
+                                                <rect key="frame" x="63.5" y="0.0" width="64" height="34"/>
                                                 <state key="normal" title="빨간색"/>
                                                 <connections>
                                                     <action selector="btnRed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1ap-Za-G06"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PzW-H1-kB8">
-                                                <rect key="frame" x="127.5" y="0.0" width="63.5" height="90"/>
+                                                <rect key="frame" x="127.5" y="0.0" width="63.5" height="34"/>
                                                 <state key="normal" title="초록색"/>
                                                 <connections>
                                                     <action selector="btnGreen:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7y5-py-LeW"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RUu-PH-l9T">
-                                                <rect key="frame" x="191" y="0.0" width="63.5" height="90"/>
+                                                <rect key="frame" x="191" y="0.0" width="63.5" height="34"/>
                                                 <state key="normal" title="파란색"/>
                                                 <connections>
                                                     <action selector="btnBlue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wAQ-sk-eO1"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dYz-aO-SEw">
-                                                <rect key="frame" x="254.5" y="0.0" width="64" height="90"/>
-                                                <state key="normal" title="두께"/>
-                                                <connections>
-                                                    <action selector="btnChangeLineWidth:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3JD-sz-r3R"/>
-                                                </connections>
-                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="두께" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z3m-e4-cyh">
+                                                <rect key="frame" x="254.5" y="0.0" width="64" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PMR-rg-s5a">
-                                                <rect key="frame" x="318.5" y="0.0" width="63.5" height="90"/>
+                                                <rect key="frame" x="318.5" y="0.0" width="63.5" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <connections>
-                                                    <action selector="btnChangeLineWidth:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="3Ar-yY-Hyw"/>
+                                                    <action selector="txtChangeLineWidth:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="eAT-S6-NoX"/>
                                                     <action selector="txtDidEndOnExit:" destination="BYZ-38-t0r" eventType="editingDidEndOnExit" id="Jh2-0f-nxi"/>
                                                     <action selector="txtTouchDown:" destination="BYZ-38-t0r" eventType="touchDown" id="c4z-xc-9ec"/>
                                                 </connections>
@@ -70,7 +69,7 @@
                                         </subviews>
                                     </stackView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xvv-jt-02G">
-                                        <rect key="frame" x="0.0" y="90" width="382" height="692"/>
+                                        <rect key="frame" x="0.0" y="34" width="382" height="748"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nJF-Gy-vrb">
                                         <rect key="frame" x="0.0" y="782" width="382" height="40"/>
